fix liquid template

--- a/capi/clusters/gcp/values.yaml.liquid
+++ b/capi/clusters/gcp/values.yaml.liquid
@@ -4,4 +4,4 @@ cluster:
   project: {{ configuration.project }}
   region: {{ configuration.region }}
   network:
-    name: {{ configuration.vpc_name | quote }}
+    name: {{ configuration.vpc_name }}
