update gcp template

--- a/capi/clusters/gcp/values.yaml.liquid
+++ b/capi/clusters/gcp/values.yaml.liquid
@@ -1,6 +1,6 @@
 cluster:
-  name: {{ configuration.cluster }}
-  kubernetesVersion: {{ configuration.kubernetesVersion }}
+  name: {{ configuration.clusterName }}
+  kubernetesVersion: {{ configuration.version }}
   project: {{ configuration.project }}
   region: {{ configuration.region }}
   network:
