--- a/capi/providers/azure/values.yaml.liquid
+++ b/capi/providers/azure/values.yaml.liquid
@@ -1,5 +1,5 @@
 cluster-api-provider-azure:
   asoControllerSettings:
     azureSubscriptionId: {{ configuration.subscriptionId }}
-    azureTenantId: {{ configuration.TenantId }}
+    azureTenantId: {{ configuration.tenantId }}
     azureClientId: {{ configuration.azureClientId }}
