fix liquid template

--- a/capi/clusters/azure/values.yaml.liquid
+++ b/capi/clusters/azure/values.yaml.liquid
@@ -1,24 +1,8 @@
 cluster:
   name: {{ configuration.clusterName }}
   kubernetesVersion: {{ configuration.version }} # Use v1.25.11 for testing.
-  azure:
-    region: {{ configuration.region }}
-
-
-
-
-
-  {{- if eq .Provider "azure" }}
-  kubernetesVersion:
-  azure:
-    clusterIdentity:
-      workloadIdentity:
-        clientID: {{ importValue "Terraform" "capz_assigned_identity_client_id" }}
-      tenantID: {{ .Context.TenantId }}
-    subscriptionID: {{ .Context.SubscriptionId }}
-    location: {{ .Region }}
-    resourceGroupName: {{ .Project }}
-    virtualNetwork:
-      name: {{ .Values.network_name | quote }}
-  {{- end }}
-
+  subscriptionID: {{ configuration.subscriptionId }}
+  location: {{ configuration.location }}
+  resourceGroupName: {{ configuration.resourceGroup }}
+  virtualNetwork:
+    name: {{ configuration.network }}
