conditionally set azure identity

--- a/capi/clusters/azure/values.yaml.liquid
+++ b/capi/clusters/azure/values.yaml.liquid
@@ -6,3 +6,4 @@ cluster:
   resourceGroupName: {{ configuration.resourceGroup }}
   virtualNetwork:
     name: {{ configuration.network }}
+  # TODO: Fill identity credentials and update templates.
