update Azure provider

--- a/capi/providers/azure/values.yaml.liquid
+++ b/capi/providers/azure/values.yaml.liquid
@@ -1,7 +1,8 @@
 identity:
-  clientID: {{ configuration.clientId }}
+  clientId: {{ configuration.clientId }}
   clientSecret: {{ configuration.clientSecret }}
-  tenantID: {{ configuration.tenantId }}
+  subscriptionId: {{ configuration.subscriptionId }}
+  tenantId: {{ configuration.tenantId }}
 
 cluster-api-provider-azure:
   asoControllerSettings:
