use network variable

--- a/capi/clusters/azure/values.yaml.liquid
+++ b/capi/clusters/azure/values.yaml.liquid
@@ -5,4 +5,4 @@ cluster:
   location: {{ configuration.location }}
   resourceGroupName: {{ configuration.resourceGroup }}
   virtualNetwork:
-    name: {{ configuration.clusterName }}-vnet
+    name: {{ configuration.network }}
