--- a/capi/providers/gcp/values.yaml.liquid
+++ b/capi/providers/gcp/values.yaml.liquid
@@ -1,3 +1,3 @@
 cluster-api-provider-gcp:
   managerBootstrapCredentials:
-    credentialsJson: {{ configuration.applicationCredentials }}
+    credentialsJson: {{ configuration.applicationCredentials | base64_decode }}
