--- a/capi/providers/gcp/values.yaml.liquid
+++ b/capi/providers/gcp/values.yaml.liquid
@@ -1,3 +1,3 @@
 cluster-api-provider-gcp:
   managerBootstrapCredentials:
-    credentialsJson: {{ configuration.applicationCredentials | b64dec | json }}
+    credentialsJson: {{ configuration.applicationCredentials | b64dec }}
