--- a/addons/grafana-agent/values.yaml.liquid
+++ b/addons/grafana-agent/values.yaml.liquid
@@ -1,4 +1,9 @@
 k8s-monitoring:
+  {% if configuration.nodeExporter == 'false' %}
+  prometheus-node-exporter:
+    enabled: false
+  {% endif %}
+
   cluster:
     name: {{ cluster.Handle }}
 
