fix single quote

--- a/addons/grafana-agent/values.yaml.liquid
+++ b/addons/grafana-agent/values.yaml.liquid
@@ -1,5 +1,5 @@
 k8s-monitoring:
-  {% if configuration.nodeExporter == 'false' %}
+  {% if configuration.nodeExporter == "false" %}
   prometheus-node-exporter:
     enabled: false
   {% endif %}
